fix: navbar hovering a bit too hard (z-index) (#3391)

--- a/src/styles/antd-overrides/drawer.scss
+++ b/src/styles/antd-overrides/drawer.scss
@@ -8,6 +8,7 @@
 
 .ant-drawer-header {
   @apply bg-l0;
+  @apply border-b-0;
 }
 
 .ant-drawer {
